WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277362
[WASM] Incorrect use of productOverflows in WASM GC operations
https://bugs.webkit.org/show_bug.cgi?id=277362
Summary
[WASM] Incorrect use of productOverflows in WASM GC operations
David Degazio
Reported
2024-07-30 11:12:49 PDT
rdar://129830849
In a few WASM operations pertaining to WASM GC arrays, the current implementation checks if productOverflows<uint32_t>(elementSize * size). This should be productOverflows<uint32_t>(elementSize, size).
Attachments
Add attachment
proposed patch, testcase, etc.
David Degazio
Comment 1
2024-07-30 13:42:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31492
EWS
Comment 2
2024-07-30 20:50:44 PDT
Committed
281633@main
(62317ccb3bf6): <
https://commits.webkit.org/281633@main
> Reviewed commits have been landed. Closing PR #31492 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug