[WASM] Incorrect use of productOverflows in WASM GC operations https://bugs.webkit.org/show_bug.cgi?id=277362 rdar://129830849

Reviewed by Yijia Huang and Yusuke Suzuki.

Fixes productOverflows() usage in some WASM GC array operations
to correctly pass two operands instead of the potentially already-
overflowing product.

* Source/JavaScriptCore/wasm/WasmOperations.cpp:
(JSC::Wasm::JSC_DEFINE_NOEXCEPT_JIT_OPERATION):
* Source/JavaScriptCore/wasm/WasmOperationsInlines.h:
(JSC::Wasm::arrayNew):

Canonical link: https://commits.webkit.org/281633@main